# pdf-tool-macos

./: ARCHITECTURE.md  BUILD.md  CLAUDE.md  README.md  README_zh.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bump-version.sh  release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  icloud.rs  lib.rs  locale.rs  main.rs  pdf_info.rs  progress.rs  watcher.rs  window.rs
src/shared/components/ui/: alert-dialog.tsx  button.tsx  context-menu.tsx  dialog.tsx  input.tsx  label.tsx  progress.tsx  scroll-area.tsx
src/shared/hooks/: use-theme.ts
src/shared/lib/: commands.ts  error-codes.ts  events.ts  i18n.ts  logger.ts  types.ts
src/shared/locales/de/: common.json  errors.json  library.json  reader.json
src/shared/locales/en/: common.json  errors.json  library.json  reader.json
src/shared/locales/es/: common.json  errors.json  library.json  reader.json
src/shared/locales/fr/: common.json  errors.json  library.json  reader.json
src/shared/locales/it/: common.json  errors.json  library.json  reader.json
src/shared/locales/ja/: common.json  errors.json  library.json  reader.json
src/shared/locales/ko/: common.json  errors.json  library.json  reader.json
src/shared/locales/pt/: common.json  errors.json  library.json  reader.json
src/shared/locales/ru/: common.json  errors.json  library.json  reader.json
src/shared/locales/zh-CN/: common.json  errors.json  library.json  reader.json
src/shared/locales/zh-TW/: common.json  errors.json  library.json  reader.json
src/shared/styles/: globals.css
src/windows/reader/: App.tsx  main.tsx
src/windows/reader/components/: OutlineTree.tsx  PdfViewer.tsx  ReaderToolbar.tsx  Sidebar.tsx  ThumbnailList.tsx
src/windows/reader/hooks/: use-drag-scroll.ts  use-zoom.ts  (+3 more)
(+1 files in other folders)
