[package]
name = "pdf-reader"
version = "0.1.0"
description = "A PDF Reader for Mac"
authors = ["Robin"]
edition = "2021"

[lib]
name = "pdf_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.35"
notify = "7"
notify-debouncer-mini = "0.5"
sha2 = "0.10"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
