[package]
name = "pdf-reader-macos"
version = "0.1.0"
description = "A PDF Reader for Mac"
authors = ["Robin"]
edition = "2021"

[lib]
name = "pdf_reader_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.35"
notify = "7"
notify-debouncer-mini = "0.5"
sha2 = "0.10"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
urlencoding = "2"
trash = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "objc2-core-foundation"] }

# Optimize dependencies in dev mode for acceptable performance
# App code stays at opt-level=0 for fast incremental compilation
[profile.dev.package."*"]
opt-level = 3
